--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">Garlands</string>
-    <string name="settings">Settings</string>
-    <string name="title_activity_settings">Settings</string>
+    <string name="app_name">Jasmine</string>
+
 
     <!-- Settings Titles -->
     <string name="toggle_description">Turn the lights out!</string>
@@ -21,6 +20,14 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
 
     <!-- Channel Details -->
-    <string name="channel_name">Notification Channel 1</string>
-    <string name="channel_description">Notifications Channel</string>
+    <string name="channel_name">Reminders</string>
+    <string name="channel_description">Reminders for Lessons</string>
+
+    <!-- Menu Items -->
+    <string name="home">Home</string>
+    <string name="title_activity_home">Home</string>
+    <string name="settings">Settings</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="search">Search</string>
+    <string name="title_activity_search">Search</string>
 </resources>
